--- a/machine-history/pom.xml
+++ b/machine-history/pom.xml
@@ -65,6 +65,9 @@
             <goals>
               <goal>build</goal>
             </goals>
+            <configuration>
+              <uberJar>true</uberJar>
+            </configuration>
           </execution>
         </executions>
       </plugin>
