--- a/machine-history/src/main/resources/application.properties
+++ b/machine-history/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.url=jdbc:h2:mem:machinehistory
-quarkus.hibernate-orm.database.generation=drop-and-create
-
+quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.url=jdbc:postgresql://localhost:5432/machine_history_testing
+quarkus.datasource.username=machine_history_user
+quarkus.datasource.password=DSAf3DSdfhjkl39s9
+quarkus.hibernate-orm.database.generation=validate
