--- a/machine-history/src/main/resources/application.properties
+++ b/machine-history/src/main/resources/application.properties
@@ -3,3 +3,5 @@ quarkus.datasource.url=jdbc:postgresql://localhost:5432/machine_history_testing
 quarkus.datasource.username=machine_history_user
 quarkus.datasource.password=DSAf3DSdfhjkl39s9
 quarkus.hibernate-orm.database.generation=validate
+quarkus.hot-reload.password=hjadfkly8924ASDFa32
+quarkus.hot-reload.url=https://machine-history-dev.apps.dev.openshift.redhatkeynote.com
