--- a/machine-history-final/Dockerfile
+++ b/machine-history-final/Dockerfile
@@ -1,5 +1,4 @@
-FROM centos:7
-RUN yum update -y
+FROM registry.access.redhat.com/ubi7-dev-preview/ubi-minimal
 COPY target/machine-history-1.0-SNAPSHOT-runner runner
 EXPOSE 8080
 CMD ["./runner"]
