--- a/machine-history/src/main/resources/application.properties
+++ b/machine-history/src/main/resources/application.properties
@@ -4,4 +4,4 @@ quarkus.datasource.username=machine_history_user
 quarkus.datasource.password=DSAf3DSdfhjkl39s9
 quarkus.hibernate-orm.database.generation=validate
 quarkus.hot-reload.password=hjadfkly8924ASDFa32
-quarkus.hot-reload.url=http://machine-history-dev.apps.dev.openshift.redhatkeynote.com
+quarkus.hot-reload.url=http://machine-history-dev.apps.live.openshift.redhatkeynote.com
