--- a/machine-history/src/main/resources/application.properties
+++ b/machine-history/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.datasource.driver=org.postgresql.Driver
 quarkus.datasource.url=jdbc:postgresql://localhost:5432/machine_history_testing
 quarkus.datasource.username=machine_history_user
-quarkus.datasource.password=DSAf3DSdfhjkl39s9
+quarkus.datasource.password=secret
 quarkus.hibernate-orm.database.generation=validate
 quarkus.hot-reload.password=hjadfkly8924ASDFa32
 quarkus.hot-reload.url=http://machine-history-dev.apps.live.openshift.redhatkeynote.com
